# copycara

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  install.sh  justfile  rustfmt.toml  test.sh
.github/workflows/: ci.yml  release.yml
docs/: analysis.md  user-guide.md
src/: cli.rs  commit.rs  config.rs  dlp.rs  git.rs  hooks.rs  ignore.rs  init.rs  main.rs  push.rs  status.rs  sync.rs
tests/: cli_test.rs  e2e_test.rs
tests/common/: mod.rs
